# aind-anatomical-utils

./: .copier-answers.yml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-call.yml  tag_and_publish.yml
docs/source/: api.rst  conf.py  index.md
scripts/: run_linters_and_checks.sh
src/aind_anatomical_utils/: __init__.py  anatomical_volume.py  ants_volume.py  coordinate_systems.py  sitk_volume.py  slicer.py  utils.py
tests/: conftest.py  test_anatomical_volume.py  test_ants_volume.py  test_coordinate_systems.py  test_example.py  test_optional_ants.py  test_sitk_volume.py  test_slicer.py
