[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aind-anatomical-utils"
description = "Tools to work with anatomically-aware files"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Allen Institute for Neural Dynamics" },
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
  { name = "Yoni Browning", email = "yoni.browning@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.4.2"

dependencies = ["numpy>=1.7", "SimpleITK>=2", "antspyx>=0.6.2"]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-anatomical-utils/"
Issues = "https://github.com/AllenNeuralDynamics/aind-anatomical-utils/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-anatomical-utils/blob/main/CHANGELOG.md"

[dependency-groups]
types = ["mypy"]
dev = [{ include-group = "types" }, "codespell", "pytest", "pytest-cov", "ruff", "interrogate"]
jupyter = [{ include-group = "dev" }, "ipykernel", "pip"]
docs = [
  { include-group = "dev" },
  "sphinx>=5.0",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "myst-parser",
  "furo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aind_anatomical_utils"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scratch"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W", "D", "UP", "ANN", "PYI"]
extend-ignore = ["ANN401"]  # Skip self/cls type annotations
per-file-ignores = { "tests/*.py" = ["ANN", "D"] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "numpy" }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./docs/build,uv.lock,scratch"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 30
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "examples",
  "site",
  "scratch",
  ".venv",
]

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true


[tool.mypy]
files = ["src/aind_anatomical_utils"]
strict = true
show_error_codes = true
exclude = ["scratch"]
# SimpleITK and ANTs (antspyx) are C-extension libraries that ship no type
# stubs, so calls into them are untyped. Allow those calls rather than
# scattering `type: ignore[no-untyped-call]` across every call site.
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

